--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "wallet-profit-app",
-  "version": "2.2.7",
+  "version": "2.2.8",
   "description": "Wallet profile data",
   "main": "main.js",
   "private": true,
@@ -33,6 +33,9 @@
       "!node_modules/**",
       "!dist/**",
       "!*.log"
+    ],
+    "asarUnpack": [
+      "**/*.node"
     ],
     "mac": {
       "icon": "build/icon.icns",
