--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
-
 {
   "name": "wallet-profit-app",
-  "version": "2.2.8",
-  "description": "Wallet profile data",
-  "main": "main.js",
+  "version": "2.2.9",
+  "description": "Wallet profit data",
+  "main": "src/main/main.js",
   "private": true,
   "scripts": {
     "start": "electron .",
     "dev": "electron .",
     "build": "electron-builder",
     "build:win": "electron-builder --win nsis --x64 --publish never",
-    "build:mac": "electron-builder --mac dmg",
+    "build:mac": "electron-builder --mac dmg --publish never",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
@@ -21,50 +20,42 @@
     "electron-builder": "24.13.3"
   },
   "build": {
-     "asar": true,
     "appId": "com.wallet.profit",
     "productName": "ANWallet",
+    "asar": true,
+    "npmRebuild": true,
     "directories": {
       "output": "dist",
       "buildResources": "build"
     },
     "files": [
-      "**/*",
-      "!node_modules/**",
-      "!dist/**",
-      "!*.log"
-    ],
-    "asarUnpack": [
-      "**/*.node"
+      "src/**/*",
+      "package.json",
+      "README.md"
     ],
     "mac": {
       "icon": "build/icon.icns",
-      "target": [
-        "dmg"
-      ],
-      "category": "public.app-category.medical"
+      "target": ["dmg"],
+      "category": "public.app-category.business"
     },
     "win": {
       "icon": "build/icon.ico",
       "target": [
         {
           "target": "nsis",
-          "arch": [
-            "x64"
-          ]
+          "arch": ["x64"]
         }
       ]
     },
-  "nsis": {
-    "oneClick": false,
-    "allowElevation": true,
-    "allowToChangeInstallationDirectory": true,
-    "createDesktopShortcut": true,
-    "installerIcon": "build/icon.ico",
-    "uninstallerIcon": "build/icon.ico",
-    "createDesktopShortcut": true,
-    "runAfterFinish": true,
-    "deleteAppDataOnUninstall": false
-  }
+    "nsis": {
+      "oneClick": false,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "installerIcon": "build/icon.ico",
+      "uninstallerIcon": "build/icon.ico",
+      "runAfterFinish": true,
+      "deleteAppDataOnUninstall": false
+    }
   }
 }
