--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
   "name": "wallet-profit-app",
-  "version": "2.2.9",
-  "description": "Wallet profit data",
+  "version": "2.2.10",
+  "description": "Wallet profile data",
   "main": "src/main/main.js",
   "private": true,
   "scripts": {
@@ -9,7 +10,7 @@
     "dev": "electron .",
     "build": "electron-builder",
     "build:win": "electron-builder --win nsis --x64 --publish never",
-    "build:mac": "electron-builder --mac dmg --publish never",
+    "build:mac": "electron-builder --mac dmg",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
@@ -22,8 +23,6 @@
   "build": {
     "appId": "com.wallet.profit",
     "productName": "ANWallet",
-    "asar": true,
-    "npmRebuild": true,
     "directories": {
       "output": "dist",
       "buildResources": "build"
@@ -35,27 +34,32 @@
     ],
     "mac": {
       "icon": "build/icon.icns",
-      "target": ["dmg"],
-      "category": "public.app-category.business"
+      "target": [
+        "dmg"
+      ],
+      "category": "public.app-category.medical"
     },
     "win": {
       "icon": "build/icon.ico",
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
-    "nsis": {
-      "oneClick": false,
-      "allowElevation": true,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "installerIcon": "build/icon.ico",
-      "uninstallerIcon": "build/icon.ico",
-      "runAfterFinish": true,
-      "deleteAppDataOnUninstall": false
-    }
+  "nsis": {
+    "oneClick": false,
+    "allowElevation": true,
+    "allowToChangeInstallationDirectory": true,
+    "createDesktopShortcut": true,
+    "installerIcon": "build/icon.ico",
+    "uninstallerIcon": "build/icon.ico",
+    "createDesktopShortcut": true,
+    "runAfterFinish": true,
+    "deleteAppDataOnUninstall": false
+  }
   }
 }
